[package]
name = "webserver_test"
version = "0.1.0"
authors = ["Alexander Andreev <andreevlex.as@gmail.com>"]

[dependencies]
actix = "0.5"
actix-web = "^0.6"
cookie = { version="0.10", features=["percent-encode", "secure"] }
futures = "0.1"
time = "0.1"
env_logger = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
jsonwebtoken = "4.0.1"

diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"

md5 = "0.3.7"

